# platform.core.multimedia.libmm-ta

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.hin  configure  configure.ac  mm-ta.pc.in  project.config
debian/: changelog  control  copyright  libmm-ta-dev.install.in  libmm-ta-sdk-dev.install.in  rules
packaging/: libmm-ta.spec
src/: Makefile.am  Makefile.in  mm_ta.c  mm_ta.h
